# static-wp-lava

./: .gitignore  CMakeLists.txt  MainPass.cpp  README.md  library.h  run.sh  run_all.sh
benchmarks/: .lava1.mem2reg.ll.swp  SVF_swap.c  SVF_swap.ll  SVF_swap.opt.ll  branch.bc  branch.bc.z3result  branch.bc_wp.md  branch.c  branch.ll  branch_named.bc.z3result  branch_named.bc_wp.md  branch_named.ll  branch_reachability.bc.z3result  branch_reachability.bc_wp.md  branch_reachability.c  branch_reachability.ll  control_flow.bc  control_flow.bc.z3result  control_flow.bc_wp.md  control_flow.c  control_flow.ll  fibonacci_iterative.c  fibonacci_recursive.bc_wp.md  fibonacci_recursive.c  func_call0.bc.z3result  func_call0.bc_wp.md  func_call0.c  func_call0.ll  func_call1.bc  func_call1.bc.z3result  func_call1.bc_wp.md  func_call1.c  func_call1.ll  hello.bc  hello.bc.z3result  hello.c  hello.cc  hello.ll  hello_named.bc_wp.md  hello_named.ll  (+30 more)
include/: MainPass.h  Miscs.h  WpExpr.h  WpPrinter.h
src/: InsHandler.cpp  InsHandler.h  MainPass.cpp  MainPass.h  Miscs.cpp  Miscs.h  MyZ3Helper.h  WpExpr.cpp  WpExpr.h  WpPrinter.cpp  WpPrinter.h  handleIns.cpp  test_expr.cpp
tests/: test_expr.cpp
